refactor register form to a component and make all providers singleton

--- a/src/app/views/user/user-register/user-register.component.html
+++ b/src/app/views/user/user-register/user-register.component.html
@@ -9,321 +9,7 @@
   <div class="ui centered grid">
     <div class="fourteen wide phone ten wide tablet eight wide computer column">
 
-      <form
-        (ngSubmit)="onSubmit()"
-        #form="ngForm"
-        class="ui form">
-        <sm-loader
-          [complete]="!loadingSubmit"
-          class="inverted"
-          text="{{'component.loading' | translate}}">
-        </sm-loader>
-
-        <h3 class="ui dividing header">
-          {{'user.register.form.general.information.section.header' | translate}}
-        </h3>
-
-        <div class="field">
-          <sm-input
-            [control]="registerForm.controls['first_name']"
-            [label]="('user.register.form.first.name.header' | translate) + ' *'"
-            [placeholder]="'user.register.form.first.name.placeholder' | translate"
-            class="left"
-            icon="user"
-            type="text">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['first_name']"
-            apiAttribute="first_name">
-          </input-errors>
-        </div>
-
-        <div class="field">
-          <sm-input
-            [control]="registerForm.controls['last_name']"
-            [label]="('user.register.form.last.name.header' | translate) + ' *'"
-            [placeholder]="'user.register.form.last.name.placeholder' | translate"
-            class="left"
-            icon="user"
-            type="text">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['last_name']"
-            apiAttribute="last_name">
-          </input-errors>
-        </div>
-
-        <div class="field">
-          <sm-input
-            [control]="registerForm.controls['email']"
-            [label]="('user.register.form.email.header' | translate) + ' *'"
-            [placeholder]="'user.register.form.email.placeholder' | translate"
-            class="left"
-            icon="mail"
-            type="text">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['email']"
-            [patternLabel]="'validations.email_pattern' | translate"
-            apiAttribute="email">
-          </input-errors>
-        </div>
-
-        <div class="field">
-          <sm-input
-            [control]="registerForm.controls['phone']"
-            [label]="('user.register.form.phone.header' | translate) + ' *'"
-            [placeholder]="'user.register.form.phone.placeholder' | translate"
-            class="left"
-            icon="phone"
-            type="text">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['phone']"
-            apiAttribute="phone">
-          </input-errors>
-        </div>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['gender'].touched && !registerForm.controls['gender'].valid) || apiErrors.hasErrorsFor('gender')}"
-          class="field">
-          <sm-select
-           [control]="registerForm.controls['gender']"
-           [data]="genders | async"
-           [label]="('user.register.form.gender.header' | translate) + ' *'"
-           [placeholder]="'user.register.form.gender.placeholder' | translate"
-           class="fluid">
-            <option
-              [value]="gender.id"
-              *ngFor="let gender of genders | async">
-              {{gender.name}}
-            </option>
-          </sm-select>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['gender']"
-            apiAttribute="gender">
-          </input-errors>
-        </div>
-
-        <h3 class="ui dividing header">
-          {{'user.register.form.address.section.header' | translate}}
-        </h3>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['street'].touched && !registerForm.controls['street'].valid) || apiErrors.hasErrorsFor('street')}"
-          class="field">
-          <sm-input
-            [control]="registerForm.controls['street']"
-            [label]="'user.register.form.street.header' | translate"
-            [placeholder]="'user.register.form.street.placeholder' | translate"
-            class="left"
-            icon="map pin"
-            type="text">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['street']"
-            apiAttribute="street">
-          </input-errors>
-        </div>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['zip'].touched && !registerForm.controls['zip'].valid) || apiErrors.hasErrorsFor('zip')}"
-          class="field">
-          <sm-input
-            [control]="registerForm.controls['zip']"
-            [label]="'user.register.form.zip.header' | translate"
-            [placeholder]="'user.register.form.zip.placeholder' | translate"
-            class="left"
-            icon="map"
-            type="text">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['zip']"
-            apiAttribute="zip">
-          </input-errors>
-        </div>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['city'].touched && !registerForm.controls['city'].valid) || apiErrors.hasErrorsFor('city')}"
-          class="field">
-          <sm-input
-            [control]="registerForm.controls['city']"
-            [label]="'user.register.form.city.header' | translate"
-            [placeholder]="'user.register.form.city.placeholder' | translate"
-            class="left"
-            icon="building"
-            type="text">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['city']"
-            apiAttribute="city">
-          </input-errors>
-        </div>
-
-        <h3 class="ui dividing header">
-          {{'user.register.form.country.and.languages.section.header' | translate}}
-        </h3>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['native_language'].touched && !registerForm.controls['native_language'].valid) || apiErrors.hasErrorsFor('language_ids')}"
-          class="field">
-          <sm-select
-           [control]="registerForm.controls['native_language']"
-           [data]="languages | async"
-           [label]="('user.register.form.native.language.header' | translate) + ' *'"
-           [placeholder]="'user.register.form.native.language.placeholder' | translate"
-           class="fluid search">
-            <option
-              [value]="language.id"
-              *ngFor="let language of languages | async">
-              {{language.name}}
-            </option>
-          </sm-select>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['native_language']"
-            apiAttribute="language_ids">
-          </input-errors>
-        </div>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['language'].touched && !registerForm.controls['language'].valid) || apiErrors.hasErrorsFor('language')}"
-          class="field">
-          <sm-select
-           [control]="registerForm.controls['language']"
-           [data]="systemLanguages | async"
-           [label]="('user.register.form.default.language.header' | translate) + ' *'"
-           [placeholder]="'user.register.form.default.language.placeholder' | translate"
-           class="fluid search">
-            <option
-              [value]="language.id"
-              *ngFor="let language of systemLanguages | async">
-              {{language.name}}
-            </option>
-          </sm-select>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['language']"
-            apiAttribute="language">
-          </input-errors>
-          <div
-            class="ui pointing grey basic label">
-            {{'user.register.form.default.language.description' | translate}}
-          </div>
-        </div>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['country_of_origin'].touched && !registerForm.controls['country_of_origin'].valid) || apiErrors.hasErrorsFor('country_of_origin')}"
-          class="field">
-          <sm-select
-           [control]="registerForm.controls['country_of_origin']"
-           [data]="countries | async"
-           [label]="('user.register.form.country.of.origin.header' | translate) + ' *'"
-           [placeholder]="'user.register.form.country.of.origin.placeholder' | translate"
-           class="fluid search">
-            <option
-              [value]="country.countryCode"
-              *ngFor="let country of countries | async">
-              {{country.name}}
-            </option>
-          </sm-select>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['country_of_origin']"
-            apiAttribute="country_of_origin">
-          </input-errors>
-        </div>
-
-        <h3 class="ui dividing header">
-          {{'user.register.form.password.section.header' | translate}}
-        </h3>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['password'].touched && !registerForm.controls['password'].valid) || apiErrors.hasErrorsFor('password')}"
-          class="field">
-          <sm-input
-            [control]="registerForm.controls['password']"
-            [label]="('user.register.form.password.header' | translate) + ' *'"
-            [placeholder]="'user.register.form.password.placeholder' | translate"
-            class="left"
-            icon="lock"
-            type="password">
-          </sm-input>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['password']"
-            apiAttribute="password">
-          </input-errors>
-        </div>
-
-        <div
-          [ngClass]="{'error': (registerForm.controls['repeat_password'].touched && !registerForm.controls['repeat_password'].valid) || passwordsSuppliedAndMisMatch()}"
-          class="field">
-          <sm-input
-            [control]="registerForm.controls['repeat_password']"
-            [label]="('user.register.form.repeat.password.header' | translate) + ' *'"
-            [placeholder]="'user.register.form.repeat.password.placeholder' | translate"
-            class="left"
-            icon="lock"
-            type="password">
-          </sm-input>
-          <input-error
-            [label]="'user.register.form.repeat.password.validation.mismatch' | translate"
-            [visible]="passwordsSuppliedAndMisMatch()">
-          </input-error>
-        </div>
-
-        <div
-          [ngClass]="{'error': !registerForm.controls['accepted_terms_and_conditions'].valid || apiErrors.hasErrorsFor('consent')}"
-          class="field">
-          <sm-checkbox
-            [control]="registerForm.controls['accepted_terms_and_conditions']"
-            [label]="('user.register.form.terms.accept' | translate) + ' *'">
-          </sm-checkbox>
-          <a
-            href="/assets/terms/160523_2051-2_Terms_and_Conditions_(en).pdf"
-            target="_blank">
-             PDF EN
-          </a>,
-          <a
-            href="/assets/terms/160520_2051-2_Anvandarvillkor_(sv).pdf"
-            target="_blank">
-             PDF SV
-           </a>
-          <input-errors
-            [apiErrors]="apiErrors"
-            [control]="registerForm.controls['accepted_terms_and_conditions']"
-            apiAttribute="consent">
-          </input-errors>
-        </div>
-
-        <div class="register-form-button-container">
-          <div
-            *ngIf="saveFail"
-            class="error-message">
-            {{'user.register.form.submit.fail' | translate}}
-          </div>
-          <div
-            *ngIf="saveSuccess"
-            class="save-message">
-            {{'user.register.form.submit.success' | translate}}
-          </div>
-          <button
-            *ngIf="!loadingSubmit"
-            class="register-form-button btn-primary btn-small btn"
-            type="submit">
-            {{'user.register.form.submit.button' | translate}}
-          </button>
-        </div>
-      </form>
+      <register-form></register-form>
     </div>
   </div>
 </div>
