add initial tslint. needs config

--- a/src/app/views/contact/contact-page.component.html
+++ b/src/app/views/contact/contact-page.component.html
@@ -1,5 +1,7 @@
 <div class="sub-header-container">
-  <h3 class="sub-header-title">{{"contact.title" | translate}}</h3>
+  <h3 class="sub-header-title">
+    {{"contact.title" | translate}}
+  </h3>
 </div>
 
 <div class="ui centered grid">
