--- a/src/app/components/forms/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/forms/reset-password-form/reset-password-form.component.html
@@ -30,9 +30,15 @@
       {{'reset.password.form.submit.error' | translate}}
     </div>
     <button
+      [disabled]="!resetPasswordForm.valid"
       type="submit"
       class="reset-password-form-button btn-primary btn-small btn">
       {{'reset.password.form.submit.button' | translate}}
     </button>
+    <input-errors
+      [apiErrors]="apiErrors"
+      [control]="resetPasswordForm.controls['one_time_token']"
+      apiAttribute="one_time_token">
+    </input-errors>
   </div>
 </form>
