Added gender to i18n for user details page

--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -82,8 +82,8 @@
     <sm-select
      [control]="settingsForm.controls['gender']"
      [data]="genders | async"
-     [label]="('user.register.form.gender.header' | translate) + ' *'"
-     [placeholder]="'user.register.form.gender.placeholder' | translate"
+     [label]="('user.settings.form.gender.header' | translate) + ' *'"
+     [placeholder]="'user.settings.form.gender.placeholder' | translate"
      class="fluid">
       <option
         [value]="gender.id"
