Added message components

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -28,6 +28,12 @@
     </div>
   </div>
 
+  <error-message
+    header="kuk"
+    description="olle"
+    icon="lock">
+  </error-message>
+
   <div class="home-jobs-slider-container home-jobs-slider-new-jobs-container">
     <div class="home-jobs-slider-new-jobs-title">
       <h2>
