Revert "My jobs component creation"

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,6 +1,7 @@
 @import '../../styles/colors';
 @import '../../styles/dimensions';
 @import '../../styles/typography';
+$job-card-border-radius: 8px;
 
 .home-container {
   .home-header-container {
@@ -72,6 +73,119 @@
         padding-top: 40px;
       }
     }
+  }
+
+  .home-jobs-slider-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 3em;
+    @media screen and (max-width: $md-device-width) {
+      padding: 3em 1em;
+    }
+
+    .home-jobs-slider-new-jobs-title {
+      color: $color-secondary-gray;
+    }
+
+    .home-jobs-slider-user-jobs-title {
+      color: $white;
+    }
+
+    .home-jobs-slider-show-all-jobs-link-container {
+      width: 100%;
+      display: flex;
+      flex-direction: column-reverse;
+
+      .home-jobs-slider-show-all-jobs-link {
+        cursor: pointer;
+        align-self: flex-end;
+        padding-left: 3em;
+      }
+
+      .home-jobs-slider-show-all-new-jobs-link {
+        color: $color-primary-cerise;
+      }
+
+      .home-jobs-slider-show-all-user-jobs-link {
+        color: $white;
+      }
+    }
+
+    .home-jobs-slider {
+      width: 100%;
+      margin-top: 15px;
+      overflow-y: scroll;
+      white-space: nowrap;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      .home-job-item-container {
+        display: inline-block;
+        width: 180px;
+        margin: 5px;
+        background-color: $default-bg-color;
+        border-radius: $job-card-border-radius;
+        box-shadow: 0 2px 6px 0 rgba(0,0,0,0.4);
+        cursor: pointer;
+
+        &:hover {
+          transform: scale(1.02);
+        }
+
+        .home-job-item-name-container {
+          height: 110px;
+          padding: 10px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
+          .home-job-item-name {
+            text-align: center;
+            white-space: normal;
+            @include truncate-owerflowing-text;
+          }
+        }
+
+        .home-job-item-salary-container {
+          color: $white;
+          background: $color-primary-cerise;
+          padding: 10px;
+          font-weight: 500;
+          /* TODO: Jobs border radius variable */
+          border-radius: 0 0 $job-card-border-radius $job-card-border-radius;
+          text-align: center;
+        }
+
+        .home-job-item-salary-will-perform-job-container {
+          background: $color-primary-cerise;
+          color: $white;
+        }
+
+        .home-job-item-salary-job-ended-container {
+          background: $color-gray-50;
+          color: $color-gray-200;
+        }
+      }
+      @media (max-width: $md-device-width) {
+        .home-job-item-container:first-of-type {
+          margin-left: 3em;
+        }
+
+        .home-job-item-container:last-of-type {
+          margin-right: 3em;
+        }
+      }
+    }
+  }
+
+  .home-jobs-slider-new-jobs-container {
+    background: $white;
+  }
+
+  .home-jobs-slider-user-jobs-container {
+    background: $color-secondary-gray;
   }
 
   .home-jobs-applied-for-container {
