--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -28,29 +28,54 @@
     </div>
   </div>
 
-  <jobs-slider
-    [sliderStyle]="'light'"
-    [title]="'home.jobs.slider.new.jobs.title' | translate"
-    [linkDestination]="JARoutes.jobs.url(['1'])"
-    [linkTitle]="'home.jobs.slider.show.all.link' | translate | lowercase">
-    <job-card
-      *ngFor="let job of newJobs"
-      [job]="job"
-      routerLink="{{JARoutes.job.url([job.id])}}">
-    </job-card>
-  </jobs-slider>
+  <div class="home-jobs-slider-container home-jobs-slider-new-jobs-container">
+    <div class="home-jobs-slider-new-jobs-title">
+      <h2>
+        {{'home.jobs.slider.new.jobs.title' | translate}}
+      </h2>
+    </div>
+    <div class="home-jobs-slider-show-all-jobs-link-container">
+      <a class="home-jobs-slider-show-all-jobs-link home-jobs-slider-show-all-new-jobs-link" routerLink="{{JARoutes.jobs.url(['1'])}}">{{'home.jobs.slider.show.all.link' | translate | lowercase}} > <i class="icon-ic-arrow-right"></i></a>
+    </div>
+    <div class="home-jobs-slider" align="center">
+      <div *ngFor="let job of newJobs" class="home-job-item-container" routerLink="{{JARoutes.job.url([job.id])}}">
+        <div class="home-job-item-name-container">
+          <div class="home-job-item-name">
+            {{job.name}}
+          </div>
+        </div>
+        <div class="home-job-item-salary-container">
+          {{job.grossAmountWithCurrency }}
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <jobs-slider *ngIf="userJobsVisible()"
-    [sliderStyle]="'dark'"
-    [title]="'home.jobs.slider.user.jobs.title' | translate"
-    [linkDestination]="JARoutes.userJobs.url([user.id])"
-    [linkTitle]="'home.jobs.slider.show.all.link' | translate | lowercase">
-    <user-job-card
-      *ngFor="let userJob of userJobs"
-      [userJob]="userJob"
-      routerLink="{{JARoutes.job.url([userJob.job.id])}}">
-    </user-job-card>
-  </jobs-slider>
+  <div class="home-jobs-slider-container home-jobs-slider-user-jobs-container" *ngIf="userJobsVisible()">
+    <div class="home-jobs-slider-user-jobs-title">
+      <h2>
+        {{'home.jobs.slider.user.jobs.title' | translate}}
+      </h2>
+    </div>
+    <div class="home-jobs-slider-show-all-jobs-link-container">
+      <a class="home-jobs-slider-show-all-jobs-link home-jobs-slider-show-all-user-jobs-link" routerLink="{{JARoutes.userJobs.url([user.id])}}">{{'home.jobs.slider.show.all.link' | translate | lowercase}} > <i class="icon-ic-arrow-right"></i></a>
+    </div>
+    <div class="home-jobs-slider" align="center">
+      <div *ngFor="let userJob of userJobs" class="home-job-item-container" routerLink="{{JARoutes.job.url([userJob.job.id])}}">
+        <div class="home-job-item-name-container">
+          <div class="home-job-item-name">
+            {{userJob.job.name}}
+          </div>
+        </div>
+        <div *ngIf="userJob.job_ended" class="home-job-item-salary-container home-job-item-salary-job-ended-container">
+          {{'home.jobs.slider.user.jobs.job.ended.label' | translate | uppercase}}
+        </div>
+        <div *ngIf="userJob.willPerform && !userJob.job_ended" class="home-job-item-salary-container home-job-item-salary-will-perform-job-container">
+          {{'home.jobs.slider.user.jobs.will.perform.job.label' | translate | uppercase}}
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="home-jobs-applied-for-container" *ngIf="jobsAppliedForVisible()">
     <div class="home-jobs-applied-for-header-container">
