--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -7,6 +7,7 @@ $fs-l: 18px;
 $fs-xl: 22px;
 $fs-xxl: 24px;
 $fs-xxxl: 32px;
+$fs-xxxxl: 48px;
 
 @mixin wrap-long-words() {
   overflow-wrap: break-word;
@@ -23,6 +24,42 @@ $fs-xxxl: 32px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+
+@mixin truncate-owerflowing-text-multiline($font-size: $paragraph-font-size, $line-height: 1.4, $lines-to-show: 3, $excerpt-bg: transparent) {
+  background: $excerpt-bg;
+  display: block; /* Fallback for non-webkit */
+  display: -webkit-box;
+  max-height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
+  font-size: $font-size;
+  line-height: $line-height;
+  -webkit-line-clamp: $lines-to-show;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  @-moz-document url-prefix() {
+    overflow: hidden;
+    position: relative;
+    &:before {
+      background: $excerpt-bg;
+      bottom: 0;
+      position: absolute;
+      right: 0;
+      float: right;
+      content: '\2026';
+      margin-left: -3rem;
+      width: 3rem;
+    }
+    &:after {
+      content: '';
+      background: $excerpt-bg;
+      position: absolute;
+      height: 50px;
+      width: 100%;
+      z-index: 1;
+    }
+  }
 }
 
 @font-face {
